* Fix minor issues of displaying user name in task dashboard * Adjust startup script